--- a/NathanWebsiteProject/src/styles/object-preview-book.css
+++ b/NathanWebsiteProject/src/styles/object-preview-book.css
@@ -8,6 +8,9 @@
     display: flex;
     gap: 25px;
     padding: 25px;
+    background-color: floralwhite;
+    height: 400px;
+    width: 760px;
 }
 
 .book-non-image {
@@ -40,10 +43,12 @@
     font-size: 26px;
     max-width: 400px;
     max-height: 50px;
+    color: darkslategray;
 }
 
 .book-author {
     font-size: 20px;
+    color: brown;
 }
 
 .book-desc {
@@ -51,11 +56,14 @@
     width: 500px;
     max-height: 250px;
     overflow-y: auto;
+    color: black;
+
 }
 
 .like-button-grey {
-    background-color: transparent;
+    background-color: lightgray;
     width: 80px;
+    color: darkgreen;
 }
 
 .like-button-green {
